# play

./: .gitignore
AI/: particle.py  utils.py
C/blocks/: Makefile  gio.c  gkget.c  test.c
abi/: Makefile  lib.c  lib.h  prog.c
ada/concurrency/: main.adb
bash/: read-bip-log  space-by-type.sh
box2d/: Makefile  box2d.cc
c++/classes/: Makefile  classes.cpp  http-request.cpp  http-request.h
c++/floats/: main.cpp
c++/operators/: app.pro  main.cpp  mydate.cpp  mydate.h
c++/tutorial/: Makefile  simpleio.cpp  streams.cpp
cairo/: polygon.c
clutter/behaviour/: Makefile  behaviour.c
clutter/hello/: Makefile  hello.c
clutter/transparent-webview/: Makefile  test-non-clutter.c  test.c
clutter/video/: Makefile  test.c
computing/graphs/: Makefile  gk-graph-edge.c  gk-graph-edge.h  gk-graph-node.c  gk-graph-node.h  gk-graph.c  gk-graph.h  main.c  teste2.txt
dbus/gnome-pk-client/: Makefile  method.c
dbus/method/: Makefile  method.c
dbus/polkit-client/: Makefile  method.c
dbus/provider/: Makefile  dbus-guptime.xml  guptime-server-bindings.h  guptime.c  guptime.h  provider.c
dbus/subscribe/: Makefile  (+1 more)
dmabuf/: main.c
dnd/: Makefile  dnd.c
gbrowser/: Makefile
gl/: Makefile  test.c
go/: test.go
gst/: test.py
gtk+/tictactoe/: Makefile  gtktictactoe.c  gtktictactoe.h  main.c  meson.build
gtop/: Makefile  uptime.c
introspection/: Makefile  test.c
jana/: Makefile  test.c
nodejs/: chat.js  multipart-clock.js
seed/: browser.js
selenium/: collabora-logins.py  scrape.py  votar.py
webgl/: gl.js  index.html
webhid/: app.js  index.html
(+165 files in other folders)
